# LLM-Finetuning

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  quickstart.py  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: alpaca.yaml
configs/examples/: production.yaml  small_model.yaml
configs/model/: base.yaml  llama2.yaml  mistral.yaml
configs/training/: default.yaml  fast.yaml
data/: example_eval.json  example_train.json
notebooks/: 01_quickstart.ipynb
scripts/: prepare_data.py
src/: __init__.py  inference.py
src/data/: data_loader.py
src/evaluation/: __init__.py  evaluate.py  metrics.py
src/models/: __init__.py  model_loader.py
src/training/: __init__.py  train.py
src/utils/: callbacks.py  common.py  logger.py
tests/: __init__.py  test_data_loader.py  test_metrics.py  test_utils.py
